# LearnFlow

./: .claudeignore  .gitignore  CLAUDE.md  LearnFlow_ADRs.tex  LearnFlow_Requirements_v1.md  Makefile  QA_Quality_Attributes_v1.md  chriam.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
Docs/: 01_UserStories.md  02_Requirements.md  03_QualityAttributes.md  04_ADR-001_Architekturstil.md  04_ADR-002_Backend-Frontend-Stack.md  04_ADR-003_Datenpersistenz.md  04_ADR-004_LLM-Provider.md  04_ADR-005_Embedding-Modell.md  04_ADR-006_Background-Worker.md  04_ADR-007_Chunking-Retrieval.md  04_ADR-008_Konfidenz-Pipeline.md  04_ADR-009_Eval-Strategie.md  04_ADR-010_API-First.md  04_ADR-Review_Kritik.md  05_C4-C1_System-Context.md  05_C4-C2_Container.md  06_Architecture-Draft.md  07_Architecture-Pitch.html  07_Definition-of-Done.md  08_ERD.md
LearningCorpus/: Eval-Gold-Dataset-Frank.md  Eval-Gold-Dataset-Reto.md  Eval_Gold-Dataset-Christoph.md  (+1 more)
Ops/: 09_CI-Runbook.md  (+2 more)
src/backend/: Dockerfile  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  seed_users.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_pgqueuer.py  0002_users.py  0003_documents_chunks.py  0004_rag_tables.py  0005_quiz.py
src/backend/app/: config.py  database.py  main.py
src/backend/app/auth/: dependencies.py  jwt.py
src/backend/app/models/: tables.py
src/backend/app/routers/: auth.py  documents.py  jobs.py
src/backend/tests/: test_documents.py  test_health.py  test_openapi_spec.py  test_queue.py  test_seed_users.py
src/backend/worker/: main.py
(+233 files in other folders)
