[project]
name = "learnflow-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F = Fehler & Stil, I = Import-Sortierung, UP = veraltete Syntax, B = Bug-Muster
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
# Ziel wird auf der Kommandozeile uebergeben (mypy .), sobald Code unter app/ liegt.

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
