[project]
name = "learnflow-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F = Fehler & Stil, I = Import-Sortierung, UP = veraltete Syntax, B = Bug-Muster
select = ["E", "F", "I", "UP", "B"]
# B008: Depends() in FastAPI function signatures is intentional
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pgqueuer.*", "bcrypt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
